--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,5 @@
   <p>氏名 <%= f.text_field :name%></p>
   <p>年齢 <%=f.text_field :age%></p>
   <input type="submit" value="送信">
-  <br>
-  <%= link_to "一覧画面へ", users_path %>
+  <p><%= link_to "一覧画面へ", users_path %></p>
 <% end %>
