--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<%= form_for @user, url: user_path(@user), html: { method: :patch } do |f| %>
+<%= form_with model: @user, local: true do |f| %>
   <h1>ユーザー 編集</h1>
     <p>氏名 <%= f.text_field :name %></p>
     <p>年齢 <%= f.text_field :age %></p>
-    <input type="submit" value="送信">
+    <%= f.submit %>
     <p><%= link_to "一覧画面へ", users_path %></p>
 <% end %>
