--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
-<%= form_for @user, url: users_path, html:{method: :post} do|f| %>
+<%= form_with model: @user, local: true do|f| %>
 <h1>ユーザー 作成</h1>
-  <p>氏名 <%= f.text_field :name%></p>
-  <p>年齢 <%=f.text_field :age%></p>
-  <input type="submit" value="送信">
+  <p>氏名 <%= f.text_field :name %></p>
+  <p>年齢 <%= f.text_field :age %></p>
+  <%= f.submit %>
   <p><%= link_to "一覧画面へ", users_path %></p>
 <% end %>
