ユーザーの新規登録画面へbootstrap実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,10 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+.container{
+    width: 1200px;
+    width: 70%;
+    margin: 5% 15%;
+    padding: 0;
+}
