--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
 
   <body>
+  <div class="container">
     <%= render "layouts/header" %>
     <%= yield %>
+  </div>
   </body>
 </html>
