送信ボタンの日本語化

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,6 +2,6 @@
   <h1>タスク 編集</h1>
   <p>タイトル <%= f.text_field :title %></p>
   <p>内容 <%= f.text_field :detail %></p>
-  <%= f.submit %>
+  <%= f.submit "送信" %>
 <% end %>
 <%= link_to "一覧画面へ", tasks_path %>
