--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,6 @@
   <h1>ユーザー 編集</h1>
     <p>氏名 <%= f.text_field :name %></p>
     <p>年齢 <%= f.text_field :age %></p>
-    <%= f.submit %>
+    <%= f.submit "送信" %>
     <p><%= link_to "一覧画面へ", users_path %></p>
 <% end %>
