--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -2,7 +2,7 @@
 <h1>メッセージ 編集</h1>
 <p>タイトル <%= f.text_field :name %></p>
 <p>内容 <%= f.text_field :content %></p>
-<%= f.submit %>
+<%= f.submit "送信" %>
 <% end %>
 
 <%= link_to "一覧画面へ", messages_path %>
