バリデーションの設定とリダイレクト処理、Flashの実装。Bootstrapを調整中

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,6 @@
-【一覧】
-<%= link_to "ユーザー", "/users" %>
-<%= link_to "メッセージ", "/messages" %>
-<%= link_to "タスク", "/tasks" %>
-
-【作成】
-<%= link_to "ユーザー", "/users/new" %>
-<%= link_to "メッセージ", "/messages/new" %>
-<%= link_to "タスク", "/tasks/new" %>
+<div class="button_wrapper">
+<%= link_to "ユーザー", "/users", class: "btn btn-outline-primary"  %>
+<%= link_to "メッセージ", "/messages", class: "btn btn-outline-primary" %>
+<%= link_to "タスク", "/tasks", class: "btn btn-outline-primary" %>
+</div>
 <hr>
