--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,25 @@ a:hover {
     text-decoration: underline;
 }
 
+.button_wrapper{
+    text-align:center;
+}
+
+.col-4{
+    margin: 0 5px;
+}
+
+.btn-primary{
+    margin-right: 20px;
+}
+
+.btn-success{
+    margin-right: 20px;
+}
+
 .container{
     width: 1200px;
     width: 70%;
-    margin: 5% 15%;
-    padding: 0;
+    margin: 3% 15%;
+    padding: 0%;
 }
