--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,5 @@
 <h1>メッセージ一覧</h1>
+<%= link_to "メッセージ", "/messages/new" %>
 <% @messages.each do |message| %>
     <p>
     <%= message.name %> <%= link_to "詳細", message_path(message.id) %>  <%= link_to "編集", edit_message_path(message.id) %>  <%= link_to "削除", message_path(message.id), :method => :delete, data: { confirm: "削除しますか？" } %>
