--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
   </head>
 
   <body>
+  <% flash.each do |msg_type, msg| %>
+    <div class="alert alert-<%= msg_type %>" role="alert">
+      <a href="#" class="close" data-dismiss="alert">×</a>
+      <%= msg %>
+    </div>
+  <% end %>
   <div class="container">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <%= render "layouts/header" %>
     <%= yield %>
   </div>
