--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,20 @@
-<%= form_with model: @user, local: true do |f| %>
-  <h1>ユーザー 編集</h1>
-    <p>氏名 <%= f.text_field :name %></p>
-    <p>年齢 <%= f.text_field :age %></p>
-    <%= f.submit "送信" %>
-    <p><%= link_to "一覧画面へ", users_path %></p>
+<h1>ユーザー 編集</h1>
+<br>
+<%= form_with model: @user, local: true do|f| %>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="text1a">氏名</span>
+    </div>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text" id="text1a">年齢</span>
+    </div>
+    <span><%= f.text_field :age, class: "form-control" %></span>
+  </div>
+  <%= f.submit class: "btn btn-primary btn-block", value: "送信"%>
+  <hr>
+  <%= link_to "一覧画面へ", users_path, class: "btn btn-info btn-block", value: "一覧画面へ" %>
 <% end %>
