新規登録、編集formの調整中

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,8 +41,7 @@ a:hover {
 }
 
 .container{
-    width: 1200px;
-    width: 70%;
-    margin: 0% 15%;
-    padding: 0% 0%;
+    width: 720px;
+    margin: 20px 350px;
+    padding: 20px 20px;
 }
